hard-gists/1074227/run.log
=== Docker Run Log for 1074227 ===
Started at: Mi 29. Okt 11:49:36 CET 2025

[2025-10-29 11:49:36] START: Running container for 1074227
[2025-10-29 11:49:36] SUCCESS: Container 02ea08c2bf6cf7a49f349e1b6104115fe3debb95d7f91a775ac1d2fbb28e550e started for 1074227
=== Container logs for 1074227 ===
  File "/snippet.py", line 38
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1074227 ===
[2025-10-29 11:49:38] INFO: Container 02ea08c2bf6cf7a49f349e1b6104115fe3debb95d7f91a775ac1d2fbb28e550e has stopped
